--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "zip": "npm run build && node src/zip.js"
   },
   "dependencies": {
+    "@tensorflow-models/handpose": "^0.1.0",
+    "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.17.0",
+    "fingerpose": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
