--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zip": "npm run build && node src/zip.js"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
