--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "zip": "npm run build && node src/zip.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "@tensorflow-models/handpose": "^0.1.0",
     "@tensorflow/tfjs": "^4.17.0",
     "@tensorflow/tfjs-backend-webgl": "^4.17.0",
