--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.17.0",
+    "csv-parse": "^5.5.5",
+    "csv-parser": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
