--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@tensorflow/tfjs": "^4.17.0",
     "@tensorflow/tfjs-backend-webgl": "^4.17.0",
     "fingerpose": "^0.1.0",
-    "@tensorflow/tfjs": "^4.17.0",
     "csv-parse": "^5.5.5",
     "csv-parser": "^3.0.0",
+    "mathjs": "^12.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
